<resources>
    <string name="app_name">Just In Train</string>

    <string name="btn_search">Cerca</string>
    <string name="hint_departure">Partenza</string>
    <string name="hint_arrival">Arrivo</string>
    <string name="title_departure_time">Ora partenza</string>
    <string name="platform_title">Binario</string>
    <string name="lasting_time_title">Durata</string>
    <string name="delay">ritardo</string>
    <string name="changesList">cambio</string>
    <string name="change_title">Cambio</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_refresh">Aggiorna</string>
    <string name="action_end">Termina</string>
    <string name="hint_select"><u>Seleziona</u></string>
    <string name="hint_time">Ora</string>
    <string name="hint_date">Data</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_favourite_journeys">Tratte Preferite</string>
    <string name="subtitle_favourite_journeys">Scorri a destra o sinistra per i dettagli</string>
    <string name="btn_favourite_journeys">Cerca e aggiungi una tratta ai Preferiti!</string>
    <string name="notification">Notifica</string>
    <string name="minus_hour">-1 h</string>
    <string name="plus_hour">+1 h</string>
    <string name="minus_day">-1 gg</string>
    <string name="plus_day">+1 gg</string>
    <string name="search">Cerca</string>

    <string name="app_id">ca-app-pub-8963908741443055~4285788324</string>
    <string name="banner_favourites_id">ca-app-pub-8963908741443055/5762521525</string>
    <string name="banner_test_favourites_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="banner_results_id">ca-app-pub-8963908741443055/2455801525</string>
    <string name="banner_test_results_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="banner_details_id">ca-app-pub-8963908741443055/3932534720</string>
    <string name="banner_test_details_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="static_shortcut_disabled_message">Non ancora disponibile</string>
    <string name="static_shortcut_long_label">Cerca</string>
    <string name="static_shortcut_short_label">Cerca</string>


</resources>
